09/22 css 스타일 수정 및 자바스크립트 외부파일로 옮기기

--- a/albaone/src/main/webapp/resources/css/employmentcontractform.css
+++ b/albaone/src/main/webapp/resources/css/employmentcontractform.css
@@ -1,24 +1,22 @@
 /* 디폴트 값 */
 * {    list-style: none;    text-decoration: none;    box-sizing: border-box;    padding: 0;    margin: 0;	}
 
-h2
-{
-    padding-bottom: 5%;
-}
+h2	{    padding-bottom: 5%;}
 
 form
 {
     padding: 2%;
-    background-color: #EDE6D2;
+    background-color: #E0D4C1;
+
     margin-bottom: 5%;
 }
 
 label
 {
-    margin-top: 2%;
+    margin-top: 1%;
 }
 
 #button
 {
-    margin-top: 2%;
+    margin-top: 1%;
 }
