--- a/albaone/src/main/webapp/resources/css/employmentcontractlistcompany.css
+++ b/albaone/src/main/webapp/resources/css/employmentcontractlistcompany.css
@@ -1,8 +1,6 @@
-/* 디폴트 값 */
-* {    list-style: none;    text-decoration: none;    box-sizing: border-box;    padding: 0;    margin: 0;	}
+*{    list-style: none;    text-decoration: none;    box-sizing: border-box;    padding: 0;    margin: 0;	}
 
-/* 제목 간격주기 */
-#title	{	margin: 5% auto;    width: 80%;    margin-top:5%;    padding-bottom: 3%;	}
-
-button {	padding: 10px 20px;	font-size: 14px; 	cursor: pointer; 	border: none; border-radius: 5px; background-color: #007bff; color: white; transition: background-color 0.3s; margin-top: 5px; float: left; }
-button:hover {background-color: #0056b3; }
+.list-group-item
+{
+	margin-bottom: 2%;
+}
