--- a/albaone/src/main/webapp/resources/css/downloadcontractexam.css
+++ b/albaone/src/main/webapp/resources/css/downloadcontractexam.css
@@ -1,12 +1,18 @@
-* {    list-style: none;    text-decoration: none;    box-sizing: border-box;    padding: 0;    margin: 0;	}
+/* 디폴트 값 */
+*{    list-style: none;    text-decoration: none;    box-sizing: border-box;    padding: 0;    margin: 0;    }
 
-span
-{
-    font-size: 10px;
-}
+/* 계약서 디자인 */
+#contract   {    margin: auto 5%;    margin-top: 5%;    margin-bottom: 5%;    padding: 5%;    border-radius: 5%;    background-color: bisque;   }
 
-/* 내용간 간격 */
-.p
-{
-    margin-top: 3%;
-}
+#title{text-align: center; font-size: 30px; margin-bottom: 5%;}
+
+/* 버튼 배치 */
+#button {    margin: auto 5%;    margin-bottom: 5%;  }
+
+/* 버튼 디자인 */
+button  {  padding: 1% 3%;    border-color: transparent;    background-color: #dc3545;    color:white;    transition: all 1s;    }
+button:hover    {    background-color: #198754;    color: #dc3545;  }
+
+/* 사인 사진 배치 */
+.sine{    display: flex;    align-items: center;    justify-content:right;    }
+.sine p {margin-right: 0.5%;}
