--- a/albaone/src/main/webapp/resources/css/employmentcontractform.css
+++ b/albaone/src/main/webapp/resources/css/employmentcontractform.css
@@ -1,17 +1,27 @@
 /* 디폴트 값 */
-*{    list-style: none;    text-decoration: none;    box-sizing: border-box;    padding: 0;    margin: 0;    }
+* {    list-style: none;    text-decoration: none;    box-sizing: border-box;    padding: 0;    margin: 0;	}
 
-#form{     margin: auto 5%;    margin-top: 5%;    margin-bottom: 5%;    border-radius: 5%; padding: 3%;background-color:antiquewhite;}
+h2	{    padding-bottom: 5%;}
 
-/* 제목 */
-#title  {    margin-bottom: 2%;    text-align: center;    font-size: 30px;    }
+form
+{
+    padding: 2%;
+    /* background-color: #E0D4C1; */
 
-textarea    {   margin-bottom: 1%;  }
+    margin-bottom: 5%;
+}
 
-#worktime   {   margin-bottom: 1%;}
+label
+{
+    margin-top: 2%;
+}
 
-#button {    padding: 0.2% 2.5%; margin-top: 2%; background-color: #dc3545; color: white; border: transparent;  transition: all 0.1;}   
-#button:hover   {   background-color: #198754;}
+#button
+{
+    margin-top: 1%; 
+}
 
-/* 전체 마진 */
-p {margin-bottom: 0.5%;}
+button
+{
+	background-color: #D8CAB8 !important;
+}
